# meraki_syslog_parser

./: .gitignore  README.md  publish.sh  pyproject.toml
meraki_syslog_parser/: README_mac.md  main.py  meraki_mx_syslog_parser.py  randomize_mac.py
meraki_syslog_server/: main.py  meraki_mx_syslog_parser.py
tests/: test_meraki_mx_syslog_parser.py
