[tool.poetry]
name = "meraki-syslog-server"
version = "0.1.0"
description = "Meraki MX Syslog Parser"
authors = ["reinaldopenno <rapenno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
